2008-05-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Refactor editor_auto_line_indentation().
   Make Smart Line Indentation set the cursor to the beginning of
   indentation for single line selections, so the user can fine-tune
   indentation if necessary. For multiple line selections, select all
   the lines after indenting.
 * src/keybindings.c, src/editor.c, src/editor.h:
   Rename editor_auto_line_indentation() to
   editor_smart_line_indentation().


2008-05-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/plugins.c, doc/plugin-symbols.c,
   plugins/export.c, plugins/vcdiff.c, plugins/demoplugin.c,
   plugins/filebrowser.c, plugins/htmlchars.c, plugins/autosave.c,
   plugins/pluginmacros.h, plugins/classbuilder.c:
   Note: this breaks the plugin API.
   Split GeanyFunctions out of GeanyData so data pointers can be
   appended before the function pointer structs without breaking the
   ABI.
   Rename GeanyFunctions fields with a p_ prefix to avoid name
   conflicts.
   Add new plugin symbol geany_functions.
   Nearly all plugins will now need to declare the following:
   'GeanyFunctions *geany_functions;', which is now used by
   pluginmacros.h.
   Add doxygen examples for geany_data and geany_functions.
   Move deprecated document and filetype typedefs to src/plugindata.h,
   as plugins aren't required to use pluginmacros.h.
   Initialize geany_data by copying a stack struct so the compiler can
   check for any missing field initializers.
   Rename plugin macro p_encoding to p_encodings to follow the core
   function encodings_ prefix.
 * src/msgwindow.c, src/editor.c:
   Fix doxygen-1.4.6 warnings about undocumented function parameters
   when using documentation comments e.g. for TODO.
 * plugins/pluginmacros.h:
   Add deprecated p_encoding alias for p_encodings.
 * src/keybindings.c:
   Fix Switch to Sidebar shortcut so that it works for whichever widget